# Booking

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
alembic/: env.py
alembic/versions/: 2026-02-06_init.py  2026-02-07_add_is_admin_to_user.py  2026-02-08_booking_time_timezone.py
docs/: er.mmd
logs/: app.log.2026-02-06
monitoring/prometheus/: prometheus.yml
monitoring/vector/: vector.toml
scripts/: create_admin.py  generate_er.py  generate_er_png.py  seed_tables.py  start.sh
src/: api.py  main.py
src/auth/: dependencies.py  models.py  repositories.py  routers.py  schemas.py  services.py
src/bookings/: models.py  repositories.py  routers.py  schemas.py  services.py
src/core/: config.py  email.py  errors.py  exception_handlers.py  logging.py  logging_decorators.py  security.py  time_utils.py
src/db/: base.py  session.py  types.py
src/tables/: models.py  repositories.py  routers.py  schemas.py  services.py
src/tasks/: celery_app.py  tasks.py
tests/integration/: conftest.py  helpers.py  test_auth_api.py  test_bookings_api.py  test_tables_api.py
tests/services/: test_auth_service.py  test_bookings_service.py  test_tables_service.py
